[package]
name = "lending_protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_protocol"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
getrandom = "0.2.15"
program = "0.3.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
